# intune-manager-python

./: .gitignore  .mypy.ini  .release-please-config.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SWIFT_ARCHITECTURE_REFERENCE.md  migration-done.txt  migration.txt  nuitka.txt  pyproject.toml
.github/: ARTIFACT_MANAGEMENT.md
.github/workflows/: ci.yml  cleanup-draft-releases.yml  cleanup.yml  release-please.yml  release.yml
assets/: LINUX_INSTALL.md  intune-manager.desktop
assets/icons/: icon.icns
scripts/: generate_icons.py  update_graph_mocks.py  update_graph_schemas.py
src/intune_manager/: __init__.py  __main__.py  bootstrap.py
src/intune_manager/auth/: AGENTS.md  CLAUDE.md  __init__.py  auth_manager.py  permission_checker.py  secret_store.py  token_cache.py  types.py
src/intune_manager/cli/: AGENTS.md  CLAUDE.md  tasks.py
src/intune_manager/config/: AGENTS.md  CLAUDE.md  __init__.py  onboarding.py  settings.py
src/intune_manager/data/: AGENTS.md  CLAUDE.md  __init__.py  cache_health.py  validation.py
src/intune_manager/data/models/: CLAUDE.md  __init__.py  application.py  assignment.py  audit.py  common.py  configuration.py  device.py  filters.py  group.py
src/intune_manager/data/repositories/: AGENTS.md  CLAUDE.md  __init__.py  apps.py  audit.py  base.py  configurations.py  devices.py  filters.py  groups.py
src/intune_manager/data/sql/: AGENTS.md  CLAUDE.md  __init__.py  engine.py  mapper.py  models.py
src/intune_manager/data/storage/: AGENTS.md  CLAUDE.md  __init__.py  attachments.py
src/intune_manager/graph/: AGENTS.md  CLAUDE.md  __init__.py  client.py  errors.py  rate_limiter.py  requests.py
src/intune_manager/services/: AGENTS.md  CLAUDE.md  __init__.py  applications.py  assignment_import.py  assignments.py  audit.py  base.py  configurations.py  devices.py  diagnostics.py  export.py  filters.py  groups.py  mobile_config.py  registry.py  sync.py
src/intune_manager/ui/: AGENTS.md  CLAUDE.md  __init__.py
src/intune_manager/ui/applications/: AGENTS.md  CLAUDE.md  __init__.py  assignment_editor.py  bulk_assignment.py  controller.py  models.py  widgets.py
src/intune_manager/ui/assignments/: AGENTS.md  CLAUDE.md  __init__.py  assignment_editor.py  bulk_wizard.py  controller.py  import_dialog.py  models.py  widgets.py
src/intune_manager/ui/components/: AGENTS.md  CLAUDE.md  __init__.py  alerts.py  assignment_bridge.py  badges.py  command_palette.py  commands.py  context.py  dialogs.py  layouts.py  notifications.py  overlays.py  progress.py  recovery.py  shortcuts.py  status.py  theme.py  time.py
src/intune_manager/ui/dashboard/: AGENTS.md  CLAUDE.md  __init__.py  controller.py  widgets.py
src/intune_manager/ui/devices/: AGENTS.md  CLAUDE.md  __init__.py  controller.py  delegates.py  models.py  widgets.py
src/intune_manager/ui/groups/: AGENTS.md  CLAUDE.md  __init__.py  controller.py  models.py  widgets.py
src/intune_manager/ui/i18n/: __init__.py  manager.py
src/intune_manager/ui/main/: AGENTS.md  CLAUDE.md  __init__.py  window.py
src/intune_manager/ui/reports/: AGENTS.md  __init__.py  controller.py  models.py  widgets.py
src/intune_manager/ui/settings/: AGENTS.md  CLAUDE.md  __init__.py  controller.py  dialog.py  page.py  setup_wizard.py  widgets.py
src/intune_manager/ui/translations/: README.md  intune_manager_en.ts
src/intune_manager/utils/: AGENTS.md  CLAUDE.md  __init__.py  app_types.py  asyncio.py  background.py  cancellation.py  crash.py  enums.py  errors.py  formatters.py  logging.py  progress.py  safe_mode.py  sanitize.py
tests/: __init__.py  conftest.py  factories.py  stubs.py
tests/auth/: test_auth_manager.py  test_secret_store.py  test_token_cache_manager.py
tests/data/: test_cache_health.py  test_device_repository.py  test_domain_models.py  test_models.py
tests/graph/: AGENTS.md  test_client_version_overrides.py  test_graph_mocks.py  test_rate_limiter.py  test_schema_alignment.py
tests/graph/mocks/: AGENTS.md  __init__.py  repository.py  responder.py
tests/graph/mocks/data/: metadata.json
tests/graph/schemas/: AGENTS.md  __init__.py  loader.py  utils.py
tests/graph/schemas/data/: intune-index.json  metadata.json
tests/performance/: __init__.py  test_phase8_performance.py
tests/services/: test_application_icons.py  test_application_refresh_metadata.py  test_assignment_diff.py  test_audit_service.py  test_base.py  test_device_service.py  test_diagnostics_service.py  test_sync_service.py
tests/ui/: test_integration_roundtrip.py
tests/ui/assignments/: test_bulk_workflow.py  test_import_dialog.py
tests/ui/components/: test_notifications.py
tests/ui/dashboard/: test_dashboard_widget.py
tests/ui/devices/: test_device_filters.py
tests/ui/main/: test_main_window.py
tests/ui/reports/: test_models.py
tests/ui/settings/: test_settings_widget.py  test_setup_wizard.py
tests/ui/sync/: test_sync_service.py
tests/utils/: test_crash_reporter.py  test_safe_mode.py  test_sanitize.py
