[project]
name = "intune-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rob Knight", email = "12484127+rknightion@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "httpx>=0.28.1",
    "keyring>=25.6.0",
    "loguru>=0.7.3",
    "msal>=1.34.0",
    "platformdirs>=4.5.0",
    "pydantic>=2.12.3",
    "pyside6>=6.10.0",
    "python-dotenv>=1.1.1",
    "qasync>=0.28.0",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "structlog>=25.4.0",
    "tenacity>=9.1.2",
]

[project.scripts]
intune-manager = "intune_manager:main"
intune-manager-app = "intune_manager.cli.tasks:run_app"
intune-manager-lint = "intune_manager.cli.tasks:lint"
intune-manager-fmt = "intune_manager.cli.tasks:fmt"
intune-manager-typecheck = "intune_manager.cli.tasks:typecheck"
intune-manager-tests = "intune_manager.cli.tasks:tests"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-qt>=4.5.0",
    "respx>=0.22.0",
    "ruff>=0.14.1",
]

[tool.nuitka]
mode = "app"
enable-plugin = "pyside6"
include-qt-plugins = "all"
nofollow-import-to = ["*.tests", "pytest", "mypy", "ruff"]
show-scons = true
lto = "yes"
jobs = "8"
console = "force"

[tool.nuitka.macos]
macos-create-app-bundle = true
macos-app-name = "IntuneManager"
include-module = ["keyring.backends.macOS"]

[tool.nuitka.windows]
windows-console-mode = "disable"
windows-uac-admin = true
include-module = ["keyring.backends.Windows"]

[tool.nuitka.linux]
include-module = ["keyring.backends.SecretService", "secretstorage"]